versioned_docs/version-2.8/reference/subsystems/autoflake.mdx
---
title: autoflake
description: |
  The Autoflake Python code formatter (https://github.com/myint/autoflake).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Autoflake Python code formatter (https://github.com/myint/autoflake).

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[autoflake]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]autoflake-skip`}
  env_repr='PANTS_AUTOFLAKE_SKIP'
  toml_repr={`[autoflake]
skip = <bool>`}
  default_repr={`False`}
>

Don&#x27;t use Autoflake when running `/home/josh/work/scie-pants/dist/pants fmt` and `/home/josh/work/scie-pants/dist/pants lint`

</Option>

### `args`

<Option
  cli_repr={`--autoflake-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_AUTOFLAKE_ARGS'
  toml_repr={`[autoflake]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to Autoflake, e.g. `--autoflake-args="--target-version=py37 --quiet"`

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--autoflake-version=<str>`}
  env_repr='PANTS_AUTOFLAKE_VERSION'
  toml_repr={`[autoflake]
version = <str>`}
  default_repr={`autoflake==1.4`}
>

Requirement string for the tool.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--autoflake-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_AUTOFLAKE_EXTRA_REQUIREMENTS'
  toml_repr={`[autoflake]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--autoflake-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_AUTOFLAKE_INTERPRETER_CONSTRAINTS'
  toml_repr={`[autoflake]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.7,<4"\n]`}
>

Python interpreter constraints for this tool.

</Option>

### `lockfile`

<Option
  cli_repr={`--autoflake-lockfile=<str>`}
  env_repr='PANTS_AUTOFLAKE_LOCKFILE'
  toml_repr={`[autoflake]
lockfile = <str>`}
  default_repr={`<default>`}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.8.1/src/python/pants/backend/python/lint/autoflake/lockfile.txt for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds.

To use a custom lockfile, set this option to a file path relative to the build root, then run `./pants generate-lockfiles --resolve=autoflake`.

Lockfile generation currently does not wire up the `[python-repos]` options. If lockfile generation fails, you can manually generate a lockfile, such as by using pip-compile or `pip freeze`. Set this option to the path to your manually generated lockfile. When manually maintaining lockfiles, set `[python].invalid_lockfile_behavior = 'ignore'`.

</Option>

### `console_script`

<Option
  cli_repr={`--autoflake-console-script=<str>`}
  env_repr='PANTS_AUTOFLAKE_CONSOLE_SCRIPT'
  toml_repr={`[autoflake]
console_script = <str>`}
  default_repr={`autoflake`}
>

The console script for the tool. Using this option is generally preferable to (and mutually exclusive with) specifying an --entry-point since console script names have a higher expectation of staying stable across releases of the tool. Usually, you will not want to change this from the default.

</Option>

### `entry_point`

<Option
  cli_repr={`--autoflake-entry-point=<str>`}
  env_repr='PANTS_AUTOFLAKE_ENTRY_POINT'
  toml_repr={`[autoflake]
entry_point = <str>`}
  default_repr={`None`}
>

The entry point for the tool. Generally you only want to use this option if the tool does not offer a --console-script (which this option is mutually exclusive with). Usually, you will not want to change this from the default.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
